--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -26,3 +26,9 @@ body {
     color: #8f8e8e;
     cursor: pointer;
 }
+
+.winner {
+    color: green;
+    font-weight: bold;
+    text-decoration-line: underline;
+}
